# binder-lab

./: .gitignore  README.md  Snakefile  pyproject.toml
.cursor/rules/: no-sys-path-modifications.mdc
binder_lab/: common.py
docker/boltz/: Dockerfile  boltz.def
examples/: config1.yaml  designs1.yaml
notebooks/: example1.ipynb
resources/af3/: README.md
resources/boltz/: download_resources.sh
scripts/: ingest_from_design_dir.py
test/: test_ingest_from_design_dir.py
test/data/design_dir_cif_npz/glp1/: batch0_sample0_rank0.cif  batch0_sample0_rank0_metadata.npz
test/data/design_dir_cif_npz/oqo-1/: batch0_sample0_rank0.cif  batch0_sample0_rank0_metadata.npz  batch0_sample1_rank0.cif
